--- a/sass/css2.css
+++ b/sass/css2.css
@@ -463,4 +463,4 @@ footer .adp-wrapper .shapes {
 }
 /* Medium devices (landscape tablets, 768px and up) */
 
-/*# sourceMappingURL=css.css.map */
+/*# sourceMappingURL=css2.css.map */
