--- a/sass/fonts/fonts.scss
+++ b/sass/fonts/fonts.scss
@@ -6,6 +6,13 @@
 }
 
 @font-face {
+    font-family: 'TaubSans-Bold';
+    font-style: normal;
+    font-weight: normal;
+    src: local('TaubSans-Bold'), url('fonts/TaubSans-Bold.woff') format('woff');
+}
+
+@font-face {
     font-family: 'TaubSans-Medium';
     font-style: normal;
     font-weight: normal;
@@ -22,21 +29,29 @@
 h1 {
     font-family: 'TaubSans-Super';
     text-transform: uppercase;
-    color: $blue;
-    font-size: 50px;
+    color: $darkblue;
+    font-size: 40px;
 }
 
 h2 {
-    font-family: 'TaubSans-Medium';
+    font-family: 'TaubSans-Regular';
     text-transform: uppercase;
+    font-style: italic;
     color: $orange;
-    font-size: 30px;
+    font-size: 35px;
+}
+
+h3 {
+    font-family: 'TaubSans-Medium';
+    color: $blue;
+    font-size: 28px;
+    line-height: 38px;
 }
 
 p {
     font-family: 'TaubSans-Regular';
     color: $black;
-    font-size: 18px;
+    font-size: 24px;
     line-height: 38px;
 }
 
@@ -46,6 +61,7 @@ strong {
 
 ul {
     padding-left: 20px;
+
     li {
         font-family: 'TaubSans-Regular';
         color: $black;
