--- a/sass/grand.scss
+++ b/sass/grand.scss
@@ -71,6 +71,15 @@
     }
 }
 
+.replay {
+    text-decoration: none;
+    color: $darkblue;
+    &:hover {
+        color: $orange;
+        transition: .4s;
+    }
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .col-wrapper {
