--- a/sass/css.css
+++ b/sass/css.css
@@ -325,6 +325,9 @@ header .header-wrapper .btn-holder .header-btn:hover {
 .col-wrapper .col-left h2 {
   text-transform: none;
 }
+.col-wrapper .col-left strong {
+  text-transform: uppercase;
+}
 .col-wrapper .col-left ul {
   padding-left: 5px;
 }
